# substrate-excercise-1-2

node/: Cargo.toml
pallets/template/: Cargo.toml
runtime/: Cargo.toml
